--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -5,13 +5,13 @@
         Najlepsze PL firmy hostingowe według branży lub usługi
       </h2>
       <div class="about__img">
-        <img src="img/icons/Frame 48096349.svg" alt="image" />
+        <img src="img/icons/laptop2.svg" alt="about" />
       </div>
     </div>
     <div class="about__bottom">
       <div class="about__advantages">
         <div class="about__wrap">
-          <img src="img/icons/Vector.svg" class="about__icon" alt="" />
+          <img src="img/icons/vector.svg" class="about__icon" alt="about" />
           <h4 class="about__title">Zalety</h4>
         </div>
         <ul class="about__list about__list--green">
@@ -40,7 +40,7 @@
           <img
             src="img/icons/disadvantages.svg"
             class="about__icon"
-            alt=""
+            alt="about"
           />
           <h4 class="about__title">Wady</h4>
         </div>
