--- a/src/html/blocks/advantages.html
+++ b/src/html/blocks/advantages.html
@@ -2,13 +2,13 @@
   <div class="advantages__wrap">
     <div class="advantages__wrapLeft">
       <img
-        src="../../../img/icons/Vector.svg"
+        src="img/icons/vector.svg"
         class="advantages__icon"
         alt=""
       />
       <h4 class="advantages__title">Zalety</h4>
     </div>
-    <img src="../../../img/icons/Expand_Less.svg" alt="" />
+    <img src="img/icons/Expand_Less.svg" alt="" />
   </div>
   <ul class="advantages__list advantages__list--green">
     <li class="advantages__item">
@@ -44,13 +44,13 @@
   <div class="disadvantages__wrap">
     <div class="disadvantages__wrapLeft">
       <img
-        src="../../../img/icons/disadvantages.svg"
+        src="img/icons/disadvantages.svg"
         class="disadvantages__icon"
         alt=""
       />
       <h4 class="disadvantages__title">Wady</h4>
     </div>
-    <img src="../../../img/icons/Expand_Less.svg" alt="" />
+    <img src="img/icons/Expand_Less.svg" alt="" />
   </div>
   <ul class="disadvantages__list disadvantages__list--red">
     <li class="disadvantages__item">
