--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header__row">
       <div class="logo">
-        <img src="img/icons/logo.svg" alt="" />
+        <img src="./img/icons/logo.svg" alt="" />
       </div>
       @@include('menu.html')
       <button class="mobile-nav-btn">
