--- a/src/html/blocks/range.html
+++ b/src/html/blocks/range.html
@@ -26,7 +26,7 @@
     <div class="card">
       <div class="card__top">
         <div class="card__icon">
-          <img src="img/icons/image 2.svg" class="card__img" alt="" />
+          <img src="img/icons/image2.svg" class="card__img" alt="" />
         </div>
         <div class="card__info">
           <h3><span>#1</span>Hostinger</h3>
@@ -45,11 +45,7 @@
 
       <div class="card__stats">
         <div class="stat">
-          <img
-            src="img/icons/icon-title.svg"
-            alt="Uptime"
-            class="stat__icon"
-          />
+          <img src="img/icons/icon-title.svg" alt="Uptime" class="stat__icon" />
           <div class="value">99.855%</div>
         </div>
         <div class="stat">
@@ -61,27 +57,15 @@
           <div class="value">10/10</div>
         </div>
         <div class="stat">
-          <img
-            src="img/icons/icon3.svg"
-            alt="Cena"
-            class="stat__icon"
-          />
+          <img src="img/icons/icon3.svg" alt="Cena" class="stat__icon" />
           <div class="value">9.50/10</div>
         </div>
         <div class="stat">
-          <img
-            src="img/icons/icon4.svg"
-            alt="Support"
-            class="stat__icon"
-          />
+          <img src="img/icons/icon4.svg" alt="Support" class="stat__icon" />
           <div class="value">8.5/10</div>
         </div>
         <div class="stat">
-          <img
-            src="img/icons/icon5.svg"
-            alt="Oferta"
-            class="stat__icon"
-          />
+          <img src="img/icons/icon5.svg" alt="Oferta" class="stat__icon" />
           <div class="value">od 73.80 zł</div>
         </div>
         <div class="stat">
@@ -94,7 +78,7 @@
         </div>
       </div>
 
-      <div class="card__bottom">@@include('advantages.html')</div>
+      <div class="card__bottom">@@include('./advantages.html')</div>
     </div>
 
     <div class="range__section">
@@ -115,11 +99,7 @@
       <div class="card">
         <div class="card__top">
           <div class="card__icon">
-            <img
-              src="img/icons/image 2.svg"
-              class="card__img"
-              alt=""
-            />
+            <img src="img/icons/image2.svg" class="card__img" alt="" />
           </div>
           <div class="card__info">
             <h3><span>#2</span>Hostinger</h3>
@@ -154,27 +134,15 @@
             <div class="value">10/10</div>
           </div>
           <div class="stat">
-            <img
-              src="img/icons/icon3.svg"
-              alt="Cena"
-              class="stat__icon"
-            />
+            <img src="img/icons/icon3.svg" alt="Cena" class="stat__icon" />
             <div class="value">9.50/10</div>
           </div>
           <div class="stat">
-            <img
-              src="img/icons/icon4.svg"
-              alt="Support"
-              class="stat__icon"
-            />
+            <img src="img/icons/icon4.svg" alt="Support" class="stat__icon" />
             <div class="value">8.5/10</div>
           </div>
           <div class="stat">
-            <img
-              src="img/icons/icon5.svg"
-              alt="Oferta"
-              class="stat__icon"
-            />
+            <img src="img/icons/icon5.svg" alt="Oferta" class="stat__icon" />
             <div class="value">od 73.80 zł</div>
           </div>
           <div class="stat">
@@ -187,7 +155,7 @@
           </div>
         </div>
         <div class="list__noShow">
-          <div class="card__bottom">@@include('advantages.html')</div>
+          <div class="card__bottom">@@include('./advantages.html')</div>
         </div>
       </div>
     </div>
