--- a/src/html/blocks/reviews.html
+++ b/src/html/blocks/reviews.html
@@ -1,4 +1,4 @@
-<div class="reviews">
+<section class="reviews">
   <h2 class="reviews__title">
     Neteasy Hosting: Analiza Opinii i Recenzji od Użytkowników
   </h2>
@@ -74,4 +74,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
