--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    @@include('blocks/header.html') 
+    @@include('blocks/header.html')
     @@include('blocks/hero.html')
-    @@include('blocks/content/content.html') 
+    @@include('blocks/content.html')
     @@include('blocks/footer.html')
     <script src="./js/index.bundle.js"></script>
   </body>
