--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -5,11 +5,11 @@
         <img src="img/icons/logo.svg" alt="logo" />
       </div>
       <p class="footer__text">Copyright © 2025</p>
-      <p class="footer__text footer__text--blue">
+      <a class="footer__text footer__text--blue">
         Ranking i porównanie hostingów
-      </p>
+      </a>
       <p class="footer__text">Powered by Vmline.pl</p>
-      <p class="footer__text footer__text--blue">Polityka prywatności</p>
+      <a class="footer__text footer__text--blue">Polityka prywatności</a>
       <div class="footer__icons">
         <div class="footer__icon">
           <img src="img/icons/facebook.svg" alt="facebook" />
@@ -29,31 +29,61 @@
       <div class="footer__wrap">
         <h5 class="footer__title">Popularne</h5>
         <ul class="footer__list">
-          <li class="footer__item">Serwery dedykowane</li>
-          <li class="footer__item">Hosting w chmurze</li>
-          <li class="footer__item">Hosting dla sklepu</li>
-          <li class="footer__item">Hosting zagraniczny</li>
-          <li class="footer__item">Hosting Wordpress</li>
+          <li class="footer__item">
+            <a href="#">Serwery dedykowane</a>
+          </li>
+          <li class="footer__item">
+            <a href="#">Hosting w chmurze</a>
+          </li>
+          <li class="footer__item">
+            <a href="#">Hosting dla sklepu</a>
+          </li>
+          <li class="footer__item">
+            <a href="#">Hosting zagraniczny</a>
+          </li>
+          <li class="footer__item">
+            <a href="#">Hosting Wordpress</a>
+          </li>
         </ul>
       </div>
       <div class="footer__wrap">
         <h5 class="footer__title">Opinie</h5>
         <ul class="footer__list">
-          <li class="footer__item">Nazwa.pl opinie</li>
-          <li class="footer__item">HostingHouse opinie</li>
-          <li class="footer__item">Atthost opinie</li>
-          <li class="footer__item">Seohost opinie</li>
-          <li class="footer__item">Smarthost recenzja</li>
+          <li class="footer__item">
+            <a href="">Nazwa.pl opinie</a>
+          </li>
+          <li class="footer__item">
+            <a href="">Atthost opinie</a>
+          </li>
+          <li class="footer__item">
+            <a href="">Seohost opinie</a>
+          </li>
+          <li class="footer__item">
+            <a href="">Smarthost recenzja</a>
+          </li>
+          <li class="footer__item">
+            <a href="">HostingHouse opinie</a>
+          </li>
         </ul>
       </div>
       <div class="footer__wrap">
         <h5 class="footer__title">Nowości</h5>
         <ul class="footer__list">
-          <li class="footer__item">Hostido recenzja</li>
-          <li class="footer__item">AZ recenzja</li>
-          <li class="footer__item">LH opinie</li>
-          <li class="footer__item">Seohost opinie</li>
-          <li class="footer__item">Smarthost recenzja</li>
+          <li class="footer__item">
+            <a href="">Hostido recenzja</a>
+          </li>
+          <li class="footer__item">
+            <a href="">AZ recenzja</a>
+          </li>
+          <li class="footer__item">
+            <a href="">LH opinie</a>
+          </li>
+          <li class="footer__item">
+            <a href="">Seohost opinie</a>
+          </li>
+          <li class="footer__item">
+            <a href="">Smarthost recenzja</a>
+          </li>
         </ul>
       </div>
     </div>
